--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 }
 
 body {
+	background-color: #202020;
 	width: 100%;
 	height: auto;
 	justify-content: center;
@@ -24,7 +25,7 @@ header {
 }
 
 header img {
-	width: 10%;
+	width: 7%;
 	height: auto;
 	margin: 15px;
 }
@@ -48,7 +49,7 @@ main {
 	justify-items: center;
 	background-color: #4b2d0b;
 	width: 100%;
-	height: 500px;
+	height: 615px;
 }
 
 .start {
@@ -124,4 +125,20 @@ main {
 	margin: 5px;
 	font-size: 1.5vw;
 	font-weight: bold;
+}
+
+.playerNameLabel {
+	font-weight: bold;
+	font-size: 1.5vw;
+}
+
+footer {
+	background-color: #202020;
+	border-top: 2px solid red;
+	color: white;
+	font-weight: bold;
+	font-size: 1vw;
+	display: grid;
+	justify-content: start;
+	padding: 10px;
 }
